# palautusrepositorio

./: README.md
viikko1/nhl-statistics-1/src/: statistics_service.py
viikko2/poetry-web/: pyproject.toml
viikko2/project-reader/src/: project.py  project_reader.py
viikko3/hello-robot/: log.html  output.xml  report.html
viikko4/: imortrat.txt  retro.md
viikko4/maksukortti-mock/src/: kassapaate.py
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/mock-demo/tests/: kauppa_test.py
viikko4/verkkokauppa/: .coverage  pyproject.toml
viikko4/verkkokauppa/src/tests/: kauppa_test.py  varasto_test.py
viikko5/tennis/src/: tennis_game.py
viikko6/src/: index.py  matchers.py
